<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/submit"
            android:drawablePadding="5dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/cancel"
            android:drawablePadding="5dp"
            android:text="@string/cancel" />
    </LinearLayout>

    <EditText
        android:id="@+id/nick_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:hint="@string/nick_name"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/nick_name"
        android:layout_below="@id/title"
        android:gravity="top"
        android:hint="@string/content"
        android:inputType="textMultiLine" >
    </EditText>

</RelativeLayout>